# asgi-matomo

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  index.html  mypy.ini  pyproject.toml  ruff.toml  versions.json
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  coverage.yml  dependency-submission.yml  release.yml  rolling.yml  scheduled.yml  test.yml
0.3/: 404.html  index.html  sitemap.xml
0.3/search/: search_index.json
0.3/usage/: index.html
0.3/usage/details/: index.html
0.3/usage/testing/: index.html
0.4/: 404.html  index.html  sitemap.xml
0.4/usage/: index.html
0.4/usage/details/: index.html
0.4/usage/testing/: index.html
0.5/: 404.html  index.html  sitemap.xml
0.5/usage/: index.html
0.5/usage/details/: index.html
0.5/usage/testing/: index.html
asgi_matomo/: __init__.py  middleware.py  trackers.py
dev/: 404.html  index.html  sitemap.xml
dev/search/: search_index.json
dev/usage/: index.html
dev/usage/details/: index.html
dev/usage/testing/: index.html
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/en/docs/usage/: details.md  index.md  testing.md
docs_src/details/: tutorial001.py  tutorial002.py  tutorial003.py
docs_src/testing/: tutorial001.py
docs_src/usage/: tutorial001.py
examples/: lifespan.py
latest/usage/details/: index.html
latest/usage/testing/: index.html
src/asgi_matomo/: __init__.py  middleware.py  trackers.py
tests/: conftest.py  docs_src  requirements-testing.txt  requirements.txt  test_asgi_matomo.py
tests/__snapshots__/test_asgi_matomo/: test_foo2_has_custom_action_name.json  test_matomo_client_gets_called_on_get_bar.json  test_matomo_client_gets_called_on_get_bar2.json  test_matomo_client_gets_called_on_get_custom_var.json  test_matomo_client_gets_called_on_get_foo.json  test_matomo_client_gets_called_on_post_baz.json  test_middleware_tracks_urlref.json  test_middleware_w_token_respects_x_forwarded_for.json  test_middleware_w_token_tracks_cip.json
tests/test_details/: test_tutorial001.py  test_tutorial002.py  test_tutorial003.py
tests/test_testing/: test_tutorial001.py
tests/test_usage/: test_tutorial001.py
