[project]
name = "asgi-matomo"
version = "0.6.0"
description = "Middleware for tracking ASGI requests with Matomo"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = ["asgiref>=3.6.0", "httpx>=0.24"]

[project.urls]
homepage = "https://spraakbanken.gu.se"
repository = "https://github.com/spraakbanken/asgi-matomo"
"Bug Tracker" = "https://github.com/spraakbanken/asgi-matomo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.10",
    "starlette>=0.46.1",
    "syrupy>=4.9.0",
]
docs = [
    "mike>=2.0.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mdx-include>=1.4.2",
    "markdown>=3.5.1",
    "mkdocs-markdownextradata-plugin>=0.2.5",
]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/asgi_matomo"]
