[project]
name = "asgi-matomo"
version = "0.6.2"
description = "Middleware for tracking ASGI requests with Matomo"
readme = "README.md"
requires-python = ">= 3.10"
license = "MIT"
authors = [
  { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["asgiref>=3.6.0", "httpx>=0.24", "matomo-core>=0.3.1"]

[project.urls]
"Bug Tracker" = "https://github.com/spraakbanken/asgi-matomo/issues"
homepage = "https://spraakbanken.gu.se"
repository = "https://github.com/spraakbanken/asgi-matomo"

[dependency-groups]
dev = [
  "asgi-lifespan>=2.1.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.10",
  "starlette>=0.46.1",
  "syrupy>=4.9.0",
  "ty>=0.0.20",
]
docs = [
  "markdown>=3.5.1",
  "mdx-include>=1.4.2",
  "mike>=2.0.0",
  "mkdocs>=1.5.3",
  "mkdocs-markdownextradata-plugin>=0.2.5",
  "mkdocs-material>=9.4.8",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "asgi_matomo"
source-exclude = ["/.github", "/docs"]
